fix(PageHeader): Should be no wrap for header content, close #15664

--- a/components/page-header/style/index.less
+++ b/components/page-header/style/index.less
@@ -7,6 +7,7 @@
   .reset-component;
   position: relative;
   padding: @page-header-padding-vertical @page-header-padding-horizontal;
+  white-space: nowrap;
   background: @component-background;
 
   &.@{pageheader-prefix-cls}-has-footer {
